# syn-miette

./: Cargo.toml  README.md  check.bash
examples/: ariadne-multibyte.rs  ariadne-syn.rs
src/: lib.rs
src/doc-snapshots/: multiple
src/snapshots/: syn_miette__tests__basic_parse-3.snap  syn_miette__tests__basic_parse.snap  syn_miette__tests__call_site-2.snap  syn_miette__tests__call_site-3.snap  syn_miette__tests__call_site.snap  syn_miette__tests__combined-2.snap  syn_miette__tests__combined.snap
