[package]
name = "syn-miette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "5.10.0", default-features = false }
proc-macro2 = { version = "1.0.67", default-features = false, features = [
    "span-locations",
] }
syn = { version = "2.0.37", default-features = false }

[dev-dependencies]
syn = { version = "2.0.37", default-features = false, features = [
    "parsing",
    "derive",
] }
miette = { version = "5.10.0", features = ["fancy"] }
insta = "1.33.0"
