[package]
name = "syn-miette"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/syn-miette"
description = "A `syn::Error` wrapper that provides pretty diagnostic messages using `miette`."
repository = "https://github.com/aatifsyed/syn-miette"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "5.10.0", default-features = false }
proc-macro2 = { version = "1.0.67", default-features = false, features = [
    "span-locations",
] }
syn = { version = "2.0.37", default-features = false }

[dev-dependencies]
syn = { version = "2.0.37", default-features = false, features = [
    "parsing",
    "derive",
    "extra-traits",
] }
miette = { version = "5.10.0", features = ["fancy"] }
insta = "1.33.0"
