[package]
name = "syn-miette"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/syn-miette"
description = "A `syn::Error` wrapper that provides pretty diagnostic messages using `miette`."
repository = "https://github.com/aatifsyed/syn-miette"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "7.2.0", default-features = false }
proc-macro2 = { version = "1.0.79", default-features = false, features = [
    "span-locations",
] }
syn = { version = "2.0.53", default-features = false }

[dev-dependencies]
ariadne = "0.4.0"
syn = { version = "2.0.53", default-features = false, features = [
    "parsing",
    "derive",
    "extra-traits",
    "printing",
] }
miette = { version = "7.2.0", features = ["fancy"] }
insta = "1.36.1"
ropey = "1.6.1"
